# django-dragon

./: LICENSE  README.md  pyproject.toml  requirements.txt
django_project/: settings.py  urls.py
dragon/: apps.py  mixins.py  settings.py  urls.py  utils.py  views.py
dragon/management/commands/: load_test_cache.py
dragon/templates/dragon/: base.html  redis_key_index.html  results.html
dragon_cache_manager/: apps.py  forms.py  mixins.py  settings.py  templatetags.py  utils.py  views.py
dragon_cache_manager/management/commands/: random_words.txt
dragon_cache_manager/templates/dragon/: base.html  button.html  redis_key_index.html  results.html  search.html
