[tool.poetry]
name = "django-dragon"
version = "0.1.2"
description = "A cache manager for Django admin"
authors = ["Logan Bibby <lbibby@thesummitgrp.com>"]
packages = [
    { include = "dragon_cache_manager" },
]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
